<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>better_ros2tcp_bridge</name>
    <version>1.0.0</version>
    <description>A better bridge for ros2 and tcp message</description>
    <maintainer email="letusgoone@outlook.com">TaciturnJian@github.com</maintainer>
    <license>Mozilla Public License 2.0</license>
    <author email="letusgoone@outlook.com">TaciturnJian</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <exec_depend>rclcpp</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>